--- a/21 aug 2019.ipynb
+++ b/21 aug 2019.ipynb
@@ -1282,10 +1282,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
     "re.search('....','hi')"
    ]
   },
@@ -1319,13 +1320,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "grapes\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "fruits=['apple','orange','mango','grapes']\n",
-    "for char in names:\n",
+    "for char in fruits:\n",
     "    if(re.search('^g',char)):\n",
     "        print (char)"
    ]
@@ -1402,9 +1411,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(3, 6), match='hon'>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "re.search('..n$','python')"
    ]
@@ -1440,11 +1460,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'group'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-d918fb445fd7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mresult\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mre\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msearch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'^.{5}$'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'1234567'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mresult\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgroup\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'group'"
+     ]
+    }
+   ],
    "source": [
-    "result=re.search('^.{5}$','1234567')\n"
+    "result=re.search('^.{5}$','1234567')\n",
+    "result.group()"
    ]
   },
   {
@@ -1520,11 +1553,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(4, 6), match='15'>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "re.search('\\d{2}2','ammu15')"
+    "re.search('\\d{2}','ammu15')"
    ]
   },
   {
@@ -1971,25 +2015,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "800\n"
+      "1000\n"
      ]
     }
    ],
    "source": [
     "import re\n",
-    "data=\" \"\" ammulu 100 bujji 200 gopi 500 \"\" \"\n",
+    "data=\" \"\" ammulu 100 bujji 200 gopi 700 \"\" \"\n",
     "names=re.findall('\\d+',data)\n",
     "total=0\n",
     "for each in names:\n",
     "    total+=int(each)\n",
     "print(total)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object doesn't support item deletion",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-d319c48a13de>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'pyhton'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mdel\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'str' object doesn't support item deletion"
+     ]
+    }
+   ],
+   "source": [
+    "a='pyhton'\n",
+    " a[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1, 'm': 2, 'u': 2, 'l': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "name=\"ammullu\"\n",
+    "freq={}\n",
+    "for char in name:\n",
+    "    oldvalue=freq.get(char,0)\n",
+    "    freq[char]=oldvalue+1\n",
+    "print(freq)"
    ]
   },
   {
