--- a/29 aug 2019.ipynb
+++ b/29 aug 2019.ipynb
@@ -402,27 +402,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 3 5 7 9\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[False, True, True, True, False]"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "n=input().split()\n",
     "l=[]\n",
@@ -1028,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1079,22 +1061,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "c g k\n",
-      "c,g,k\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "i=int(input())\n",
-    "inp = list(map(str,input().split()))\n",
+    "inp = list(map(str,input().split()[::-1]))\n",
     "print(\"\".join(inp))"
    ]
   },
